реализован блок отзывов со слайдером, половина блока Анализ, некоторые правки межблочных отступов

--- a/index.html
+++ b/index.html
@@ -412,71 +412,138 @@
                 </dl>
               </div>
             </div>
-            <div class="statistics__box skills__item">
-              <h3 class="statistics__box-title skills__title">
-                Расскажите, как ваша жизнь изменилась после сессий или оставьте
-                реакцию:
-              </h3>
-              <div class="statistics__box-inner">
-                <a href="#" class="statistics__box-btn color1">
-                  <span>+800</span>
-                  <picture>
-                    <svg
-                      width="50"
-                      height="43"
-                      viewBox="0 0 50 43"
-                      fill="none"
-                      xmlns="http://www.w3.org/2000/svg"
-                    >
-                      <path
-                        d="M0.890625 24.9583C0.890625 11.493 11.8064 0.577148 25.2718 0.577148H28.8181C40.3249 0.577148 49.6529 9.90521 49.6529 21.412V21.412C49.6529 32.9187 40.3249 42.2468 28.8181 42.2468H3.89062C2.23377 42.2468 0.890625 40.9036 0.890625 39.2468V24.9583Z"
-                        fill="white"
-                      />
-                      <circle
-                        cx="18.2926"
-                        cy="23.185"
-                        r="3.10306"
-                        fill="#3F67F4"
-                      />
-                      <circle
-                        cx="26.2711"
-                        cy="23.185"
-                        r="3.10306"
-                        fill="#3F67F4"
-                      />
-                      <circle
-                        cx="34.2515"
-                        cy="23.185"
-                        r="3.10306"
-                        fill="#3F67F4"
-                      />
-                    </svg>
-                  </picture>
-                  <p class="statistics__box-dedscription">
-                    Рассказать о результате
-                  </p>
-                </a>
+            <div class="container">
+              <div class="statistics__box skills__item">
+                <h3 class="statistics__box-title skills__title">
+                  Расскажите, как ваша жизнь изменилась после сессий или
+                  оставьте реакцию:
+                </h3>
+                <div class="statistics__box-inner">
+                  <a href="#" class="statistics__box-btn color1">
+                    <span>+800</span>
+                    <picture>
+                      <svg
+                        width="50"
+                        height="43"
+                        viewBox="0 0 50 43"
+                        fill="none"
+                        xmlns="http://www.w3.org/2000/svg"
+                      >
+                        <path
+                          d="M0.890625 24.9583C0.890625 11.493 11.8064 0.577148 25.2718 0.577148H28.8181C40.3249 0.577148 49.6529 9.90521 49.6529 21.412V21.412C49.6529 32.9187 40.3249 42.2468 28.8181 42.2468H3.89062C2.23377 42.2468 0.890625 40.9036 0.890625 39.2468V24.9583Z"
+                          fill="white"
+                        />
+                        <circle
+                          cx="18.2926"
+                          cy="23.185"
+                          r="3.10306"
+                          fill="#3F67F4"
+                        />
+                        <circle
+                          cx="26.2711"
+                          cy="23.185"
+                          r="3.10306"
+                          fill="#3F67F4"
+                        />
+                        <circle
+                          cx="34.2515"
+                          cy="23.185"
+                          r="3.10306"
+                          fill="#3F67F4"
+                        />
+                      </svg>
+                    </picture>
+                    <p class="statistics__box-dedscription">
+                      Рассказать о результате
+                    </p>
+                  </a>
 
-                <a href="#" class="statistics__box-btn color2">
-                  <span>+800</span>
-                  <picture>
-                    <svg
-                      width="46"
-                      height="40"
-                      viewBox="0 0 46 40"
-                      fill="none"
-                      xmlns="http://www.w3.org/2000/svg"
-                    >
-                      <path
-                        d="M22.593 39.7335L19.317 36.8753C7.68162 26.7633 0 20.0941 0 11.9092C0 5.24006 5.4675 0 12.4261 0C16.3573 0 20.1304 1.7539 22.593 4.52551C25.0556 1.7539 28.8287 0 32.7598 0C39.7185 0 45.186 5.24006 45.186 11.9092C45.186 20.0941 37.5044 26.7633 25.869 36.8969L22.593 39.7335Z"
-                        fill="white"
-                      />
-                    </svg>
-                  </picture>
-                  <p class="statistics__box-dedscription">Оставить реакцию</p>
-                </a>
+                  <a href="#" class="statistics__box-btn color2">
+                    <span>+800</span>
+                    <picture>
+                      <svg
+                        width="46"
+                        height="40"
+                        viewBox="0 0 46 40"
+                        fill="none"
+                        xmlns="http://www.w3.org/2000/svg"
+                      >
+                        <path
+                          d="M22.593 39.7335L19.317 36.8753C7.68162 26.7633 0 20.0941 0 11.9092C0 5.24006 5.4675 0 12.4261 0C16.3573 0 20.1304 1.7539 22.593 4.52551C25.0556 1.7539 28.8287 0 32.7598 0C39.7185 0 45.186 5.24006 45.186 11.9092C45.186 20.0941 37.5044 26.7633 25.869 36.8969L22.593 39.7335Z"
+                          fill="white"
+                        />
+                      </svg>
+                    </picture>
+                    <p class="statistics__box-dedscription">Оставить реакцию</p>
+                  </a>
+                </div>
               </div>
             </div>
+          </div>
+        </section>
+
+        <section class="reviews">
+          <div class="container">
+            <h2 class="reviews__title">Истории клиентов</h2>
+
+            <div class="reviews__swiper swiper">
+              <div class="reviews__swiper-wrapper swiper-wrapper">
+                <div class="swiper-slide">
+                  <div class="reviews__container">
+                    <blockquote class="reviews__slider-description">
+                      «Психолог? Нет, он не волшебник, не чудотворец, не атлет,
+                      Не жизненных задач решебник, и он не супер-человек. Он так
+                      же дышит, так же любит, и так же чувствует, как все. Он не
+                      вершит великих судеб, он все не знает о тебе.»
+                    </blockquote>
+                    <div class="reviews__slider-footer">
+                      <div class="reviews__user">
+                        <picture>
+                          <img
+                            class="reviews__user-img"
+                            src="img/client.png"
+                            alt="Клиент сайта"
+                            width="121"
+                            height="121"
+                          />
+                        </picture>
+                      </div>
+                      <p class="reviews__description">
+                        Татьяна Николаева, домохозяйка
+                      </p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="reviews__arrow-inner">
+                <div class="swiper-button-prev"></div>
+                <div class="swiper-button-next"></div>
+              </div>
+            </div>
+          </div>
+        </section>
+
+        <section class="analysis">
+          <h2 class="visually-hidden">Анализ клиентов</h2>
+          <p class="analysis__title">
+            Проанализируем ваши проблемы и подберем подходящего психолога
+          </p>
+          <div class="analysis__item skills__item">
+            <ol class="analysis__list list-reset">
+              <li class="analysis__elem">
+                <p class="analysis__text">Заполните анкету</p>
+              </li>
+              <li class="analysis__elem">
+                <p class="analysis__text">
+                  Платформа предложит подходящих психологов
+                </p>
+              </li>
+              <li class="analysis__elem">
+                <p class="analysis__text">
+                  Выберете психолога и время консультации
+                </p>
+              </li>
+            </ol>
           </div>
         </section>
       </main>
