некоторые правки списка блока Анализ

--- a/index.html
+++ b/index.html
@@ -525,25 +525,27 @@
 
         <section class="analysis">
           <h2 class="visually-hidden">Анализ клиентов</h2>
-          <p class="analysis__title">
-            Проанализируем ваши проблемы и подберем подходящего психолога
-          </p>
-          <div class="analysis__item skills__item">
-            <ol class="analysis__list list-reset">
-              <li class="analysis__elem">
-                <p class="analysis__text">Заполните анкету</p>
-              </li>
-              <li class="analysis__elem">
-                <p class="analysis__text">
-                  Платформа предложит подходящих психологов
-                </p>
-              </li>
-              <li class="analysis__elem">
-                <p class="analysis__text">
-                  Выберете психолога и время консультации
-                </p>
-              </li>
-            </ol>
+          <div class="container">
+            <p class="analysis__title">
+              Проанализируем ваши проблемы и подберем подходящего психолога
+            </p>
+            <div class="analysis__item skills__item">
+              <ol class="analysis__list list-reset">
+                <li class="analysis__elem">
+                  <p class="analysis__text">Заполните анкету</p>
+                </li>
+                <li class="analysis__elem">
+                  <p class="analysis__text">
+                    Платформа предложит подходящих психологов
+                  </p>
+                </li>
+                <li class="analysis__elem">
+                  <p class="analysis__text">
+                    Выберете психолога и время консультации
+                  </p>
+                </li>
+              </ol>
+            </div>
           </div>
         </section>
       </main>
