--- a/index.html
+++ b/index.html
@@ -541,7 +541,7 @@
                 </li>
                 <li class="analysis__elem">
                   <p class="analysis__text">
-                    Выберете психолога и время консультации хуй
+                    Выберете психолога и время консультации
                   </p>
                 </li>
               </ol>
