реализация блока Анализ, реализация блока Преимушеств со слайдером

--- a/index.html
+++ b/index.html
@@ -547,6 +547,89 @@
               </ol>
             </div>
           </div>
+          <a class="analysis__btn-link topic__btn-link" href="#"
+            >Заполнить анкету</a
+          >
+        </section>
+
+        <section class="advantages">
+          <div class="container">
+            <h2 class="visually-hidden">Преимущества</h2>
+            <p class="advantages__company">Uwio —</p>
+            <p class="advantages__title">решение проблем в одном касании</p>
+            <div class="advantages-slider__swiper swiper">
+              <div class="swiper-wrapper">
+                <div class="swiper-slide">
+                  <div class="advantages-slide__container">
+                    <h3 class="advantages-slide__title">
+                      Уникальная person-tech платформа
+                    </h3>
+                    <p class="advantages-slide__description">
+                      Видеоконсультации конфиденциальны, проходят в личном
+                      кабинете и доступны с любого устройства
+                    </p>
+                  </div>
+                </div>
+                <div class="swiper-slide">
+                  <div class="advantages-slide__container">
+                    <h3 class="advantages-slide__title">
+                      Легкое управление расписанием
+                    </h3>
+                    <p class="advantages-slide__description">
+                      Выбирайте удобное время и переносите сессии во встроенном
+                      календаре
+                    </p>
+                  </div>
+                </div>
+                <div class="swiper-slide">
+                  <div class="advantages-slide__container">
+                    <h3 class="advantages-slide__title">Live-заметки</h3>
+                    <p class="advantages-slide__description">
+                      Сохраняйте важные рекомендации вашего психолога, чтобы
+                      терапия проходила эффективно и увлекательно
+                    </p>
+                  </div>
+                </div>
+                <div class="swiper-slide">
+                  <div class="advantages-slide__container">
+                    <h3 class="advantages-slide__title">
+                      Образовательные программы
+                    </h3>
+                    <p class="advantages-slide__description">
+                      Сессии дополненные ценными знаниями приведут вас к новым
+                      высотам и закрепят успех терапии
+                    </p>
+                  </div>
+                </div>
+                <div class="swiper-slide">
+                  <div class="advantages-slide__container">
+                    <h3 class="advantages-slide__title">
+                      Чат с экспертами Uwio
+                    </h3>
+                    <p class="advantages-slide__description">
+                      Ответим на любой вопрос и поможем оперативно решить любую
+                      проблему
+                    </p>
+                  </div>
+                </div>
+                <div class="swiper-slide">
+                  <div class="advantages-slide__container">
+                    <h3 class="advantages-slide__title">Мы рядом</h3>
+                    <p class="advantages-slide__description">
+                      Сессии с психологами доступны из любой точки мира
+                    </p>
+                  </div>
+                </div>
+              </div>
+              <div class="advantages__arrow-inner reviews__arrow-inner">
+                <div class="swiper-button-prev"></div>
+                <div class="swiper-button-next"></div>
+              </div>
+            </div>
+            <a class="advantages__btn-link topic__btn-link" href="#"
+              >Подобрать специалиста</a
+            >
+          </div>
         </section>
       </main>
       <footer class="main-footer"></footer>
