реализация блока футер и team

--- a/index.html
+++ b/index.html
@@ -553,8 +553,8 @@
         </section>
 
         <section class="advantages">
+          <h2 class="visually-hidden">Преимущества</h2>
           <div class="container">
-            <h2 class="visually-hidden">Преимущества</h2>
             <p class="advantages__company">Uwio —</p>
             <p class="advantages__title">решение проблем в одном касании</p>
             <div class="advantages-slider__swiper swiper">
@@ -571,7 +571,7 @@
                   </div>
                 </div>
                 <div class="swiper-slide">
-                  <div class="advantages-slide__container">
+                  <div class="advantages-slide__container slide-bg2">
                     <h3 class="advantages-slide__title">
                       Легкое управление расписанием
                     </h3>
@@ -582,7 +582,7 @@
                   </div>
                 </div>
                 <div class="swiper-slide">
-                  <div class="advantages-slide__container">
+                  <div class="advantages-slide__container slide-bg3">
                     <h3 class="advantages-slide__title">Live-заметки</h3>
                     <p class="advantages-slide__description">
                       Сохраняйте важные рекомендации вашего психолога, чтобы
@@ -591,7 +591,7 @@
                   </div>
                 </div>
                 <div class="swiper-slide">
-                  <div class="advantages-slide__container">
+                  <div class="advantages-slide__container slide-bg4">
                     <h3 class="advantages-slide__title">
                       Образовательные программы
                     </h3>
@@ -602,7 +602,7 @@
                   </div>
                 </div>
                 <div class="swiper-slide">
-                  <div class="advantages-slide__container">
+                  <div class="advantages-slide__container slide-bg5">
                     <h3 class="advantages-slide__title">
                       Чат с экспертами Uwio
                     </h3>
@@ -613,7 +613,7 @@
                   </div>
                 </div>
                 <div class="swiper-slide">
-                  <div class="advantages-slide__container">
+                  <div class="advantages-slide__container slide-bg6">
                     <h3 class="advantages-slide__title">Мы рядом</h3>
                     <p class="advantages-slide__description">
                       Сессии с психологами доступны из любой точки мира
@@ -629,10 +629,67 @@
             <a class="advantages__btn-link topic__btn-link" href="#"
               >Подобрать специалиста</a
             >
+
+            <section class="team">
+              <div class="team__box statistics__box skills__item">
+                <h3 class="team__box-title statistics__box-title skills__title">
+                  От команды Uwio:
+                </h3>
+                <div class="team-slider__swiper swiper">
+                  <div class="team-slider__wrapper swiper-wrapper">
+                    <div class="swiper-slide">
+                      <blockquote class="team__box-citation">
+                        «Человек с эмоциональными проблемами и внутренними
+                        конфликтами очень похож на дом, в котором много хаоса и
+                        бардака - фундаментальная задача психолога, очистить
+                        этот дом, упорядочить хаотично разбросанные вещи и
+                        научить владельца не допускать подобного захламления в
+                        дальнейшем.»
+                      </blockquote>
+                      <div class="team__box-inner">
+                        <picture>
+                          <img
+                            class="team__user-img"
+                            src="img/team-user.png"
+                            alt="специалист"
+                            width="325"
+                            height="258"
+                          />
+                        </picture>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </section>
           </div>
         </section>
       </main>
-      <footer class="main-footer"></footer>
+      <footer class="main-footer">
+        <div class="container">
+          <h2 class="visually-hidden">Информация и контакты о компании</h2>
+          <div class="main-footer__logo">
+            <img
+              class="logo"
+              src="img/Uwio.png"
+              alt="Логотип компании"
+              width="86"
+              height="39"
+            />
+          </div>
+          <div class="main-footer__box">
+            <ul class="main-footer__list list-reset">
+              <li class="main-footer__item">Вопросы и ответы</li>
+              <li class="main-footer__item">Служба поддержки</li>
+              <li class="main-footer__item">Контакты</li>
+              <li class="main-footer__item">Пользовательское соглашение</li>
+              <li class="main-footer__item">
+                Политика в отношении обработки и защиты персональных данных
+              </li>
+            </ul>
+          </div>
+        </div>
+      </footer>
     </div>
 
     <script src="js/swiper-bundle.min.js"></script>
