реализация бургер меню

--- a/index.html
+++ b/index.html
@@ -55,6 +55,36 @@
                 <span class="main-nav__burger-line"></span>
               </button>
             </nav>
+            <div class="main-header__menu main-footer none">
+              <div class="container">
+                <div class="main-header__menu-logo main-footer__logo">
+                  <img
+                    class="logo"
+                    src="img/Uwio.png"
+                    alt="Логотип компании"
+                    width="86"
+                    height="39"
+                  />
+                </div>
+                <div class="main-footer__box">
+                  <ul class="main-footer__list list-reset">
+                    <li class="main-footer__item">Вход</li>
+                    <li class="main-footer__item">Оставить отзыв</li>
+                    <li class="main-footer__item">Подобрать психолога</li>
+                    <li class="main-footer__item">Вопросы и ответы</li>
+                    <li class="main-footer__item">Служба поддержки</li>
+                    <li class="main-footer__item">Контакты</li>
+                    <li class="main-footer__item">
+                      Пользовательское соглашение
+                    </li>
+                    <li class="main-footer__item">
+                      Политика в отношении обработки и защиты персональных
+                      данных
+                    </li>
+                  </ul>
+                </div>
+              </div>
+            </div>
             <div class="main-header__title">
               <a class="main-header__logo" href="index.html">
                 <picture>
@@ -692,6 +722,7 @@
       </footer>
     </div>
 
+    <script src="js/burger.js"></script>
     <script src="js/swiper-bundle.min.js"></script>
     <script src="js/main.js"></script>
   </body>
