исправлено отображение фонов и отступов, исправлено управление слайдеров некоторых секций, в меню бургера и футера добавлены ссылки

--- a/index.html
+++ b/index.html
@@ -66,20 +66,38 @@
                     height="39"
                   />
                 </div>
-                <div class="main-footer__box">
+                <div class="main-header__box main-footer__box">
                   <ul class="main-footer__list list-reset">
-                    <li class="main-footer__item">Вход</li>
-                    <li class="main-footer__item">Оставить отзыв</li>
-                    <li class="main-footer__item">Подобрать психолога</li>
-                    <li class="main-footer__item">Вопросы и ответы</li>
-                    <li class="main-footer__item">Служба поддержки</li>
-                    <li class="main-footer__item">Контакты</li>
-                    <li class="main-footer__item">
-                      Пользовательское соглашение
+                    <li class="main-header__item main-footer__item">
+                      <a class="main-header__link" href="#">Вход</a>
+                    </li>
+                    <li class="main-header__item main-footer__item">
+                      <a class="main-header__link" href="#">Оставить отзыв</a>
+                    </li>
+                    <li class="main-header__item main-footer__item">
+                      <a class="main-header__link" href="#"
+                        >Подобрать психолога</a
+                      >
+                    </li>
+                    <li class="main-header__item main-footer__item">
+                      <a class="main-header__link" href="#">Вопросы и ответы</a>
+                    </li>
+                    <li class="main-header__item main-footer__item">
+                      <a class="main-header__link" href="#">Служба поддержки</a>
+                    </li>
+                    <li class="main-header__item main-footer__item">
+                      <a class="main-header__link" href="#">Контакты</a>
+                    </li>
+                    <li class="main-header__item main-footer__item">
+                      <a class="main-header__link" href="#"
+                        >Пользовательское соглашение</a
+                      >
                     </li>
                     <li class="main-footer__item">
-                      Политика в отношении обработки и защиты персональных
-                      данных
+                      <a class="main-header__link" href="#"
+                        >Политика в отношении обработки и защиты персональных
+                        данных</a
+                      >
                     </li>
                   </ul>
                 </div>
@@ -329,8 +347,10 @@
                   </div>
                 </div>
               </div>
-              <div class="swiper-button-prev"></div>
-              <div class="swiper-button-next"></div>
+              <div class="purposes__arrow-inner">
+                <div class="reviews__next swiper-button-prev"></div>
+                <div class="reviews__prev swiper-button-next"></div>
+              </div>
             </div>
             <a class="topic__btn-link purposes-slider__btn-link" href="#"
               >Подобрать специалиста</a
@@ -535,8 +555,8 @@
                 </div>
               </div>
               <div class="reviews__arrow-inner">
-                <div class="swiper-button-prev"></div>
-                <div class="swiper-button-next"></div>
+                <div class="reviews__prev swiper-button-prev"></div>
+                <div class="reviews__next swiper-button-next"></div>
               </div>
             </div>
           </div>
@@ -641,8 +661,8 @@
                 </div>
               </div>
               <div class="advantages__arrow-inner reviews__arrow-inner">
-                <div class="swiper-button-prev"></div>
-                <div class="swiper-button-next"></div>
+                <div class="reviews__prev swiper-button-prev"></div>
+                <div class="reviews__next swiper-button-next"></div>
               </div>
             </div>
             <a class="advantages__btn-link topic__btn-link" href="#"
@@ -678,6 +698,10 @@
                       </div>
                     </div>
                   </div>
+                  <div class="reviews__arrow-inner">
+                    <div class="reviews__prev swiper-button-prev"></div>
+                    <div class="reviews__next swiper-button-next"></div>
+                  </div>
                 </div>
               </div>
             </section>
@@ -698,12 +722,24 @@
           </div>
           <div class="main-footer__box">
             <ul class="main-footer__list list-reset">
-              <li class="main-footer__item">Вопросы и ответы</li>
-              <li class="main-footer__item">Служба поддержки</li>
-              <li class="main-footer__item">Контакты</li>
-              <li class="main-footer__item">Пользовательское соглашение</li>
               <li class="main-footer__item">
-                Политика в отношении обработки и защиты персональных данных
+                <a class="main-footer__link" href="#">Вопросы и ответы</a>
+              </li>
+              <li class="main-footer__item">
+                <a class="main-footer__link" href="#">Служба поддержки</a>
+              </li>
+              <li class="main-footer__item">
+                <a class="main-footer__link" href="#">Контакты</a>
+              </li>
+              <li class="main-footer__item">
+                <a class="main-footer__link" href="#"
+                  >Пользовательское соглашение</a
+                >
+              </li>
+              <li class="main-footer__item">
+                <a class="main-footer__link" href="#">
+                  Политика в отношении обработки и защиты персональных данных</a
+                >
               </li>
             </ul>
           </div>
